--- a/.tmux.conf
+++ b/.tmux.conf
@@ -54,3 +54,7 @@ set -g display-time 3000
 #set-window-option -g monitor-activity on
 #set -g visual-activity on
 #setw -g automatic-rename off
+
+# Tab-key binding
+bind-key C-Tab next-window
+bind-key C-S-Tab previous-window
