--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,5 @@
 set-option -g default-shell /bin/zsh
+set-option -gw xterm-keys on
 set-window-option -g xterm-keys on
 set -g mode-mouse on
 set -g mouse-resize-pane on
@@ -16,6 +17,9 @@ bind _ split-window -v
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
+# Tab-key binding
+bind -n C-Tab next-window
+bind -n C-S-Tab previous-window
 # l is for last window by default. i'm used to that, but somewhat conflicted
 #bind l select-pane -R
  
@@ -55,6 +59,3 @@ set -g display-time 3000
 #set -g visual-activity on
 #setw -g automatic-rename off
 
-# Tab-key binding
-bind-key C-Tab next-window
-bind-key C-S-Tab previous-window
