--- a/vim.rc
+++ b/vim.rc
@@ -70,7 +70,7 @@ inoremap <C-S> <C-O>:update<CR>
 nnoremap <C-Tab> >>_
 nnoremap <S-Tab> <<_
 inoremap <S-Tab> <C-D>
-vnoremap <C-Tab> >gv
+vnoremap <Tab> >gv
 vnoremap <S-Tab> <gv
 
 " Ctrl-Home as top of file
