modified:   vim.rc

--- a/vim.rc
+++ b/vim.rc
@@ -1,7 +1,10 @@
 " colorcolumn
 highlight MatchParen cterm=bold ctermfg=cyan
+highlight PmenuSel  ctermfg=white     ctermbg=Yellow    guifg=white    guibg=grey40
 
 
+" enable spell checker
+set spell
 
 " set commands
 set expandtab
@@ -63,22 +66,22 @@ hi StatusLine ctermfg=Yellow
 " Color popup
 "Omni menu colors
 hi Pmenu     ctermfg=lightgrey ctermbg=brown     guifg=grey60   guibg=brown
-hi PmenuSel  ctermfg=white     ctermbg=darkgrey  guifg=white    guibg=grey40
 
 " enable syntax highlight and auto-complete
 syntax enable
 syntax on             " syntax highlighting
 
+inoremap <leader>. <C-P>
 
 "Edit mapping (make cursor keys work like in Windows: <C-Left><C-Right>
 "Move to next word.
 nnoremap <C-Left> b
-vnoremap <C-S-Left> b
+vnoremap <C-S-Left> vb
 nnoremap <C-S-Left> gh<C-O>b
 inoremap <C-S-Left> <C-\><C-O>gh<C-O>b
 
 nnoremap <C-Right> w
-vnoremap <C-S-Right> w
+vnoremap <C-S-Right> ve
 nnoremap <C-S-Right> gh<C-O>w
 inoremap <C-S-Right> <C-\><C-O>gh<C-O>w
 
@@ -143,6 +146,96 @@ let Tlist_Process_File_Always = 1 "even without taglist window, create tags file
 let Tlist_Use_Right_Window = 1 "display taglist window on the right
 let Tlist_Display_Prototype = 1 "display full prototype instead of just function name
 
+"" neocomplcache https://github.com/Shougo/neocomplcache.vim
+"" Disable AutoComplPop.
+"let g:acp_enableAtStartup = 0
+"" Use neocomplcache.
+"let g:neocomplcache_enable_at_startup = 0
+"" Use smartcase.
+"let g:neocomplcache_enable_smart_case = 1
+"" Set minimum syntax keyword length.
+"let g:neocomplcache_min_syntax_length = 3
+"let g:neocomplcache_lock_buffer_name_pattern = '\*ku\*'
+"
+"" Enable heavy features.
+"" Use camel case completion.
+""let g:neocomplcache_enable_camel_case_completion = 1
+"" Use underbar completion.
+""let g:neocomplcache_enable_underbar_completion = 1
+"
+"" Define dictionary.
+"let g:neocomplcache_dictionary_filetype_lists = {
+"    \ 'default' : '',
+"    \ 'vimshell' : $HOME.'/.vimshell_hist',
+"    \ 'scheme' : $HOME.'/.gosh_completions'
+"        \ }
+"
+"" Define keyword.
+"if !exists('g:neocomplcache_keyword_patterns')
+"    let g:neocomplcache_keyword_patterns = {}
+"endif
+"let g:neocomplcache_keyword_patterns['default'] = '\h\w*'
+"
+"" Plugin key-mappings.
+"inoremap <expr><C-g>     neocomplcache#undo_completion()
+"inoremap <expr><C-l>     neocomplcache#complete_common_string()
+"
+"" Recommended key-mappings.
+"" <CR>: close popup and save indent.
+"inoremap <silent> <CR> <C-r>=<SID>my_cr_function()<CR>
+"function! s:my_cr_function()
+"  "return neocomplcache#smart_close_popup() . "\<CR>"
+"  " For no inserting <CR> key.
+"  return pumvisible() ? neocomplcache#close_popup() : "\<CR>"
+"endfunction
+"" <TAB>: completion.
+"inoremap <expr><TAB>  pumvisible() ? "\<C-n>" : "\<TAB>"
+"" <C-h>, <BS>: close popup and delete backword char.
+"inoremap <expr><C-h> neocomplcache#smart_close_popup()."\<C-h>"
+"inoremap <expr><BS> neocomplcache#smart_close_popup()."\<C-h>"
+"inoremap <expr><C-y>  neocomplcache#close_popup()
+"inoremap <expr><C-e>  neocomplcache#cancel_popup()
+"" Close popup by <Space>.
+""inoremap <expr><Space> pumvisible() ? neocomplcache#close_popup() : "\<Space>"
+"
+"" For cursor moving in insert mode(Not recommended)
+""inoremap <expr><Left>  neocomplcache#close_popup() . "\<Left>"
+""inoremap <expr><Right> neocomplcache#close_popup() . "\<Right>"
+""inoremap <expr><Up>    neocomplcache#close_popup() . "\<Up>"
+""inoremap <expr><Down>  neocomplcache#close_popup() . "\<Down>"
+"" Or set this.
+""let g:neocomplcache_enable_cursor_hold_i = 1
+"" Or set this.
+""let g:neocomplcache_enable_insert_char_pre = 1
+"
+"" AutoComplPop like behavior.
+"let g:neocomplcache_enable_auto_select = 1
+"
+"" Shell like behavior(not recommended).
+""set completeopt+=longest
+""let g:neocomplcache_enable_auto_select = 1
+""let g:neocomplcache_disable_auto_complete = 1
+""inoremap <expr><TAB>  pumvisible() ? "\<Down>" : "\<C-x>\<C-u>"
+"
+"" Enable omni completion.
+"autocmd FileType css setlocal omnifunc=csscomplete#CompleteCSS
+"autocmd FileType html,markdown setlocal omnifunc=htmlcomplete#CompleteTags
+"autocmd FileType javascript setlocal omnifunc=javascriptcomplete#CompleteJS
+"autocmd FileType python setlocal omnifunc=pythoncomplete#Complete
+"autocmd FileType xml setlocal omnifunc=xmlcomplete#CompleteTags
+"
+"" Enable heavy omni completion.
+"if !exists('g:neocomplcache_omni_patterns')
+"  let g:neocomplcache_omni_patterns = {}
+"endif
+"let g:neocomplcache_omni_patterns.php = '[^. \t]->\h\w*\|\h\w*::'
+"let g:neocomplcache_omni_patterns.c = '[^.[:digit:] *\t]\%(\.\|->\)'
+"let g:neocomplcache_omni_patterns.cpp = '[^.[:digit:] *\t]\%(\.\|->\)\|\h\w*::'
+"
+"" For perlomni.vim setting.
+"" https://github.com/c9s/perlomni.vim
+"let g:neocomplcache_omni_patterns.perl = '\h\w*->\h\w*\|\h\w*::'
+
 " Function keys
 " F2 -- Toggle Paste mode
 nnoremap <F2> :set invpaste paste?<CR>
@@ -157,6 +250,16 @@ nmap <F4> :NERDTreeToggle<cr>
 nmap <F6> :TlistShowPrototype
 
 autocmd FileType python set omnifunc=pythoncomplete#Complete
+autocmd FileType javascript set omnifunc=javascriptcomplete#CompleteJS
+autocmd FileType html set omnifunc=htmlcomplete#CompleteTags
+autocmd FileType css set omnifunc=csscomplete#CompleteCSS
+autocmd FileType xml set omnifunc=xmlcomplete#CompleteTags
+autocmd FileType php set omnifunc=phpcomplete#CompletePHP
+autocmd FileType c set omnifunc=ccomplete#Complete
+" omnicomplete
+let g:AutoComplPop_BehaviorKeywordLength = 0
+
+
 
 " " Bundles through Vundle
 set nocompatible               " be iMproved
@@ -168,9 +271,14 @@ Bundle 'gmarik/vundle'
 " Additional bundles
 Bundle 'git://git.wincent.com/command-t.git'
 Bundle 'AutoComplPop'
+"Bundle 'neocomplcache'
 Bundle 'The-NERD-tree'
 Bundle 'majutsushi/tagbar'
 Bundle 'flazz/vim-colorschemes'
+Bundle 'scrooloose/syntastic'
+Bundle 'ervandew/supertab'
+"Bundle 'davidhalter/jedi-vim'
+
 
 if argc() == 2
   silent all
