--- a/vim.rc
+++ b/vim.rc
@@ -59,6 +59,14 @@ function! AutoHighlightToggle()
   endif
 endfunction
 
+" Change cursor shape in different modes
+if has("autocmd")
+  au InsertEnter * silent execute "!gconftool-2 --type string --set /apps/gnome-terminal/profiles/Default/cursor_shape ibeam"
+  au InsertLeave * silent execute "!gconftool-2 --type string --set /apps/gnome-terminal/profiles/Default/cursor_shape block"
+  au VimLeave * silent execute "!gconftool-2 --type string --set /apps/gnome-terminal/profiles/Default/cursor_shape ibeam"
+endif
+
+
 " Highlight all search patterns
 set hlsearch
 " Highlight the status line of the active window
