tmux attach to existing session

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -59,3 +59,5 @@ set -g display-time 3000
 #set -g visual-activity on
 #setw -g automatic-rename off
 
+# if run as "tmux attach", create a session if one does not already exist
+new-session -n $HOST
