--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,10 +1,16 @@
+set-option -g history-limit 3000
 set-option -g default-shell /bin/zsh
 set-option -gw xterm-keys on
 set-window-option -g xterm-keys on
+set-window-option -g mode-mouse on
 set -g mode-mouse on
 set -g mouse-resize-pane on
 set -g mouse-select-pane on
 set -g mouse-select-window on
+set -g mouse on
+
+# to enable mouse scroll, see https://github.com/tmux/tmux/issues/145#issuecomment-150736967
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
 
 
 #--References-------------------------------------------------------------------
@@ -30,7 +36,7 @@ set -g status-fg white
  
 # Left side of status bar
 set -g status-left-length 20
-set -g status-left '#[fg=green][#[bg=black,fg=cyan]#S#[bg=black,fg=blue,dim]:#H#[fg=green]]'
+set -g status-left '#[fg=green][#[bg=black,fg=cyan]#S#[bg=black,fg=blue]:#H#[fg=green]]'
  
 # Inactive windows in status bar
 set-window-option -g window-status-format '#[fg=cyan,dim]#I#[fg=blue]:#[default]#W#[fg=grey,dim]#F'
