--- a/vim.rc
+++ b/vim.rc
@@ -1,10 +1,16 @@
 " colorcolumn
 highlight MatchParen cterm=bold ctermfg=cyan
-highlight PmenuSel  ctermfg=white     ctermbg=Yellow    guifg=white    guibg=grey40
+highlight PmenuSel  ctermfg=white     ctermbg=Yellow    guifg=white    guibg=grey44
 
+set term=xterm-256color
 
 " enable spell checker
 set spell
+
+set mouse=a
+
+" set latest for lightline.vim
+set laststatus=2
 
 " set commands
 set expandtab
@@ -37,6 +43,9 @@ set cursorline
 
 " Color
 colorscheme desert
+
+
+set tags+=/data00/home/yue.qi/tags
 
 set spellfile+=~/.vim/bundle/vundle/spell/en.utf-8.add
 
@@ -71,7 +80,6 @@ endfunction
 "  au VimLeave * silent execute "!gconftool-2 --type string --set /apps/gnome-terminal/profiles/Default/cursor_shape ibeam"
 "endif
 
-
 " Highlight all search patterns
 set hlsearch
 " Highlight the status line of the active window
@@ -97,7 +105,6 @@ nnoremap <C-Right> w
 vnoremap <C-S-Right> ve
 nnoremap <C-S-Right> gh<C-O>w
 inoremap <C-S-Right> <C-\><C-O>gh<C-O>w
-
 " Ctrl-c as copy
 vnoremap <C-C> "+y
 
@@ -112,7 +119,6 @@ nnoremap <S-Tab> <<_
 inoremap <S-Tab> <C-D>
 vnoremap <Tab> >gv
 vnoremap <S-Tab> <gv
-
 " Ctrl-Home as top of file
 inoremap <C-Home> gg
 " Ctrl-End as end of file
@@ -134,7 +140,6 @@ vnoremap <C-Insert> "+y
 map <S-Insert> "+gP
 "cmap <C-V> <C-R>+
 cmap <S-Insert> <C-R>+
-
 " Toggle Quickfix Windows
 command -bang -nargs=? QFix call QFixToggle(<bang>0)
 function! QFixToggle(forced)
@@ -144,6 +149,7 @@ unlet g:qfix_win
 else
 copen 10
 let g:qfix_win = bufnr("$")
+let g:go_version_warning = 0
 endif
 endfunction
 nnoremap <leader>q :QFix<CR>
@@ -154,100 +160,11 @@ let Tlist_Exit_OnlyWindow = 1 "if taglist window is the only window left, exit v
 let Tlist_Show_Menu = 1 "show Tags menu in gvim
 let Tlist_Show_One_File = 1 "show tags of only one file
 let Tlist_GainFocus_On_ToggleOpen = 1 "automatically switch to taglist window
+
 let Tlist_Highlight_Tag_On_BufEnter = 1 "highlight current tag in taglist window
-let Tlist_Process_File_Always = 1 "even without taglist window, create tags file, required for displaying tag in statusline
+let Tlist_Process_File_Always = 1 "even without taglist window, create tags file, required for displaying tag in status line
 let Tlist_Use_Right_Window = 1 "display taglist window on the right
 let Tlist_Display_Prototype = 1 "display full prototype instead of just function name
-
-"" neocomplcache https://github.com/Shougo/neocomplcache.vim
-"" Disable AutoComplPop.
-"let g:acp_enableAtStartup = 0
-"" Use neocomplcache.
-"let g:neocomplcache_enable_at_startup = 0
-"" Use smartcase.
-"let g:neocomplcache_enable_smart_case = 1
-"" Set minimum syntax keyword length.
-"let g:neocomplcache_min_syntax_length = 3
-"let g:neocomplcache_lock_buffer_name_pattern = '\*ku\*'
-"
-"" Enable heavy features.
-"" Use camel case completion.
-""let g:neocomplcache_enable_camel_case_completion = 1
-"" Use underbar completion.
-""let g:neocomplcache_enable_underbar_completion = 1
-"
-"" Define dictionary.
-"let g:neocomplcache_dictionary_filetype_lists = {
-"    \ 'default' : '',
-"    \ 'vimshell' : $HOME.'/.vimshell_hist',
-"    \ 'scheme' : $HOME.'/.gosh_completions'
-"        \ }
-"
-"" Define keyword.
-"if !exists('g:neocomplcache_keyword_patterns')
-"    let g:neocomplcache_keyword_patterns = {}
-"endif
-"let g:neocomplcache_keyword_patterns['default'] = '\h\w*'
-"
-"" Plugin key-mappings.
-"inoremap <expr><C-g>     neocomplcache#undo_completion()
-"inoremap <expr><C-l>     neocomplcache#complete_common_string()
-"
-"" Recommended key-mappings.
-"" <CR>: close popup and save indent.
-"inoremap <silent> <CR> <C-r>=<SID>my_cr_function()<CR>
-"function! s:my_cr_function()
-"  "return neocomplcache#smart_close_popup() . "\<CR>"
-"  " For no inserting <CR> key.
-"  return pumvisible() ? neocomplcache#close_popup() : "\<CR>"
-"endfunction
-"" <TAB>: completion.
-"inoremap <expr><TAB>  pumvisible() ? "\<C-n>" : "\<TAB>"
-"" <C-h>, <BS>: close popup and delete backword char.
-"inoremap <expr><C-h> neocomplcache#smart_close_popup()."\<C-h>"
-"inoremap <expr><BS> neocomplcache#smart_close_popup()."\<C-h>"
-"inoremap <expr><C-y>  neocomplcache#close_popup()
-"inoremap <expr><C-e>  neocomplcache#cancel_popup()
-"" Close popup by <Space>.
-""inoremap <expr><Space> pumvisible() ? neocomplcache#close_popup() : "\<Space>"
-"
-"" For cursor moving in insert mode(Not recommended)
-""inoremap <expr><Left>  neocomplcache#close_popup() . "\<Left>"
-""inoremap <expr><Right> neocomplcache#close_popup() . "\<Right>"
-""inoremap <expr><Up>    neocomplcache#close_popup() . "\<Up>"
-""inoremap <expr><Down>  neocomplcache#close_popup() . "\<Down>"
-"" Or set this.
-""let g:neocomplcache_enable_cursor_hold_i = 1
-"" Or set this.
-""let g:neocomplcache_enable_insert_char_pre = 1
-"
-"" AutoComplPop like behavior.
-"let g:neocomplcache_enable_auto_select = 1
-"
-"" Shell like behavior(not recommended).
-""set completeopt+=longest
-""let g:neocomplcache_enable_auto_select = 1
-""let g:neocomplcache_disable_auto_complete = 1
-""inoremap <expr><TAB>  pumvisible() ? "\<Down>" : "\<C-x>\<C-u>"
-"
-"" Enable omni completion.
-"autocmd FileType css setlocal omnifunc=csscomplete#CompleteCSS
-"autocmd FileType html,markdown setlocal omnifunc=htmlcomplete#CompleteTags
-"autocmd FileType javascript setlocal omnifunc=javascriptcomplete#CompleteJS
-"autocmd FileType python setlocal omnifunc=pythoncomplete#Complete
-"autocmd FileType xml setlocal omnifunc=xmlcomplete#CompleteTags
-"
-"" Enable heavy omni completion.
-"if !exists('g:neocomplcache_omni_patterns')
-"  let g:neocomplcache_omni_patterns = {}
-"endif
-"let g:neocomplcache_omni_patterns.php = '[^. \t]->\h\w*\|\h\w*::'
-"let g:neocomplcache_omni_patterns.c = '[^.[:digit:] *\t]\%(\.\|->\)'
-"let g:neocomplcache_omni_patterns.cpp = '[^.[:digit:] *\t]\%(\.\|->\)\|\h\w*::'
-"
-"" For perlomni.vim setting.
-"" https://github.com/c9s/perlomni.vim
-"let g:neocomplcache_omni_patterns.perl = '\h\w*->\h\w*\|\h\w*::'
 
 " Function keys
 " F2 -- Toggle Paste mode
@@ -277,35 +194,92 @@ let g:AutoComplPop_BehaviorKeywordLength = 0
 " to work together with gitgutter sign column.
 "let g:ycm_enable_diagnostic_signs = 0
 
+" Specify a directory for plugins
+" - For Neovim: stdpath('data') . '/plugged'
+" - Avoid using standard Vim directory names like 'plugin'
+"call plug#begin('~/.vim/plugged')
+"" Make sure you use single quotes
+"
+"" Additional bundles
+"Plug 'git://git.wincent.com/command-t.git'
+""Plugin 'AutoComplPop'
+"Plug 'The-NERD-tree'
+"Plug 'majutsushi/tagbar'
+"Plug 'flazz/vim-colorschemes'
+"Plug 'scrooloose/syntastic'
+""Plugin 'ervandew/supertab'
+"Plug 'tpope/vim-fugitive'
+""Plugin 'octol/vim-cpp-enhanced-highlight'
+"Plug 'mru.vim'
+"Plug 'tComment'
+""Plugin 'airblade/vim-gitgutter'
+"Plug 'Townk/vim-autoclose'
+"" Initialize plugin system
+"call plug#end()
 
 
-" " Bundles through Vundle
+" " Plugins through Vundle
 set nocompatible               " be iMproved
 filetype off                   " required!
-filetype plugin indent on
-set rtp+=~/.vim/bundle/vundle
-call vundle#rc()
-Bundle 'gmarik/vundle'
-" Additional bundles
-Bundle 'git://git.wincent.com/command-t.git'
-"Bundle 'AutoComplPop'
-"Bundle 'neocomplcache'
-Bundle 'The-NERD-tree'
-Bundle 'majutsushi/tagbar'
-Bundle 'flazz/vim-colorschemes'
-Bundle 'scrooloose/syntastic'
-"Bundle 'ervandew/supertab'
-Bundle 'tpope/vim-fugitive'
-"Bundle 'octol/vim-cpp-enhanced-highlight'
-Bundle 'mru.vim'
-Bundle 'tComment'
-"Bundle 'airblade/vim-gitgutter'
-Bundle 'Townk/vim-autoclose'
-"Bundle 'davidhalter/jedi-vim'
-Bundle 'hsanson/vim-android'
+set rtp+=~/.vim/bundle/Vundle.vim
+call vundle#begin()
+Plugin 'VundleVim/Vundle.vim'
+"" Additional bundles
+Plugin 'git://git.wincent.com/command-t.git'
+Plugin 'AutoComplPop'
+Plugin 'The-NERD-tree'
+Plugin 'majutsushi/tagbar'
+Plugin 'flazz/vim-colorschemes'
+Plugin 'scrooloose/syntastic'
+Plugin 'tpope/vim-fugitive'
+Plugin 'octol/vim-cpp-enhanced-highlight'
+Plugin 'mru.vim'
+Plugin 'tComment'
+Plugin 'Townk/vim-autoclose'
+Plugin 'itchyny/lightline.vim'
+Plugin 'solarnz/thrift.vim'
+Plugin 'rhysd/vim-clang-format'
+Plugin 'godlygeek/tabular'
+Plugin 'preservim/vim-markdown'
+
+" All of your Plugins must be added before the following line
+Plugin 'itchyny/lightline.vim'
+Plugin 'solarnz/thrift.vim'
+Plugin 'rhysd/vim-clang-format'
+Plugin 'godlygeek/tabular'
+Plugin 'preservim/vim-markdown'
+
+" All of your Plugins must be added before the following line
+call vundle#end()            " required
+filetype plugin indent on    " required
 
 
 
 if argc() == 2
   silent all
 endif
+
+" For lightline.vim
+" if !has('gui_running')
+"   set t_Co=256
+" endif
+set noshowmode
+
+hi clear SpellBad
+hi SpellBad cterm=NONE
+" Set style for gVim
+hi SpellBad gui=undercurl
+
+" no swap
+set noswapfile
+
+
+" mucomplete
+set completeopt+=menuone
+set completeopt+=noselect
+set shortmess+=c   " Shut off completion messages
+set belloff+=ctrlg " If Vim beeps during completion "
+
+" acp
+let g:acp_enableAtStartup = 1
+let g:acp_behaviorKeywordCommand = "\<C-n>"
