--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,12 @@
+# set -g @plugin 'git@bitbucket.com:user/plugin'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
+yue.qi@n192-073-039%/data00/home/yue.qi> q googl
+yue.qi@n192-073-039%/data00/home/yue.qi> cat ~/.tmux.conf | more
 set-option -g history-limit 3000
 set-option -g default-shell /bin/zsh
+set-option -g default-terminal "screen-256color"
 set-option -gw xterm-keys on
 set-window-option -g xterm-keys on
 set-window-option -g mode-mouse on
@@ -14,9 +21,10 @@ bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft=
 
 
 #--References-------------------------------------------------------------------
-# <a href="http://blog.hawkhost.com/2010/07/02/tmux-%E2%80%93-the-terminal-multiplexer-part-2/" title="http://blog.hawkhost.com/2010/07/02/tmux-%E2%80%93-the-terminal-multiplexer-part-2/">http://blog.hawkhost.com/2010/07/02/tmux-%E2%80%93-the-terminal-multiple...</a>
+# <a href="http://blog.hawkhost.com/2010/07/02/tmux-%E2%80%93-the-terminal-multiplexer-part-2/" title="http://blog.hawkhost.com/2010/07/02/tmux-%E2%80%93-the-terminal-multip
+lexer-part-2/">http://blog.hawkhost.com/2010/07/02/tmux-%E2%80%93-the-terminal-multiple...</a>
 # <a href="https://wiki.archlinux.org/index.php/Tmux" title="https://wiki.archlinux.org/index.php/Tmux">https://wiki.archlinux.org/index.php/Tmux</a>
- 
+
 #--Key-Bindings-----------------------------------------------------------------
 bind | split-window -h
 bind _ split-window -v
@@ -28,32 +36,40 @@ bind -n C-Tab next-window
 bind -n C-S-Tab previous-window
 # l is for last window by default. i'm used to that, but somewhat conflicted
 #bind l select-pane -R
- 
+bind -n End send-key C-e
+bind -n Home send-key C-a
+
+
 #--Status-Bar-------------------------------------------------------------------
 # Default colors
 set -g status-bg black
 set -g status-fg white
- 
 # Left side of status bar
 set -g status-left-length 20
 set -g status-left '#[fg=green][#[bg=black,fg=cyan]#S#[bg=black,fg=blue]:#H#[fg=green]]'
- 
+
 # Inactive windows in status bar
 set-window-option -g window-status-format '#[fg=cyan,dim]#I#[fg=blue]:#[default]#W#[fg=grey,dim]#F'
- 
+
 # Current or active window in status bar
 #set-window-option -g window-status-current-bg yellow
 #set-window-option -g window-status-current-fg black
 set-window-option -g window-status-current-format '#[bg=blue,fg=cyan,bold]#I#[bg=blue,fg=cyan]:#[fg=white]#W#[fg=dim]#F'
- 
+
 # Alerted window in status bar. Windows which have an alert (bell, activity or content).
 # set-window-option -g window-status-alert-fg red
 # set-window-option -g window-status-alert-bg white
- 
+
 # Right side of status bar
+set -g @world_clock_tz 'America/Los_Angeles'
+set -g @world_clock_tz 'Asia/Shanghai'
+set -g @world_clock_fmt '%H:%M_%tz'
+
+
 #set -g status-right '#[fg=yellow]#(date)'
-set -g status-right '#[fg=green][#[fg=blue]%Y-%m-%d #[fg=white]%H:%M#[default]#[fg=green]]'
- 
+#set -g status-right '#[fg=green][#[fg=white]%Y-%m-%d #[fg=white]%H:%M#[default]#[fg=green]]'
+set -g status-right '#[fg=green][ #[fg=white]%Y-%m-%d #[fg=white]#{world_clock_status}#[default]#[fg=green]]'
+
 #--Usability--------------------------------------------------------------------
 set-option -g status-keys vi
 set-window-option -g mode-keys vi
@@ -67,3 +83,46 @@ set -g display-time 3000
 
 # if run as "tmux attach", create a session if one does not already exist
 new-session -n $HOST
+
+# List of plugins
+# Right side of status bar
+set -g @world_clock_tz 'America/Los_Angeles'
+set -g @world_clock_tz 'Asia/Shanghai'
+set -g @world_clock_fmt '%H:%M_%tz'
+
+
+#set -g status-right '#[fg=yellow]#(date)'
+#set -g status-right '#[fg=green][#[fg=white]%Y-%m-%d #[fg=white]%H:%M#[default]#[fg=green]]'
+set -g status-right '#[fg=green][ #[fg=white]%Y-%m-%d #[fg=white]#{world_clock_status}#[default]#[fg=green]]'
+
+#--Usability--------------------------------------------------------------------
+set-option -g status-keys vi
+set-window-option -g mode-keys vi
+# keep tmux msgs around longer
+set -g display-time 3000
+# set -g set-titles off
+# Set window notifications
+#set-window-option -g monitor-activity on
+#set -g visual-activity on
+#setw -g automatic-rename off
+
+# if run as "tmux attach", create a session if one does not already exist
+new-session -n $HOST
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'alexanderjeurissen/tmux-world-clock'
+set -g @plugin 'tmux-plugins/tmux-sidebar'
+
+
+
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'github_username/plugin_name#branch'
+# set -g @plugin 'git@github.com:user/plugin'
+# set -g @plugin 'git@bitbucket.com:user/plugin'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
